# hyper-parallel

./: .gitignore  CODEOWNERS  MANIFEST.in  README.en.md  README.md  Third_Party_Open_Source_Software_Notice  requirements.txt  setup.py
.agentic/skills/: README.md
.agentic/skills/autogit/: SKILL.md
.agentic/skills/dist-op-dev/: SKILL.md
.agentic/skills/ms-op-analysis/: SKILL.md
.agentic/skills/pt-op-analysis/: SKILL.md
.jenkins/check/config/: filter_pylint.txt  whitelizard.txt
.jenkins/test/config/: dependent_packages.yaml
dist_parallel/: __init__.py  dtensor.py  layout.py  tensor_redistribution.py
dist_parallel/core/: dtensor.py  layout.py  parameter_init.py  tensor_redistribution.py
dist_parallel/core/hsdp/: __init__.py  hsdp_api.py  hsdp_async_grad_hook.py  hsdp_grad_buffer.py  hsdp_grad_hook.py  hsdp_param.py  hsdp_scheduler.py  hsdp_state.py
dist_parallel/core/tensor_parallel/: _op_dispatch.py  local_func.py  shard.py
dist_parallel/hsdp/: __init__.py  hsdp_api.py  hsdp_async_grad_hook.py  hsdp_grad_buffer.py  hsdp_grad_hook.py  hsdp_param.py  hsdp_param_buffer.py  hsdp_scheduler.py  hsdp_state.py
dist_parallel/mindspore/: __init__.py  local_func.py
dist_parallel/platform/: __init__.py  platform.py
dist_parallel/platform/mindspore/: dtensor.py  parameter_init.py  platform.py  platform_graph.py
dist_parallel/platform/torch/: dtensor.py  group_utils.py  platform.py
dist_parallel/tensor_parallel/: _op_dispatch.py  local_func.py  shard.py
dist_parallel/tensor_parallel/mindspore/: _group_manager.py  layout.py  shard.py
dist_parallel/tensor_parallel/ops/: parallel_arithmetic.py  parallel_concat.py  parallel_embedding.py  parallel_flash_attention_score.py  parallel_gather.py  parallel_matmul.py  parallel_norm.py  parallel_reduce.py  parallel_reshape.py  parallel_transpose.py
dist_parallel/tensor_parallel/torch/: dtensor.py  layout.py
dist_parallel/torch/tests/: tensor_redistribution.py
hyper_parallel/: __init__.py
hyper_parallel/auto_parallel/fast-tuner/: README.md  pyproject.toml
hyper_parallel/auto_parallel/fast-tuner/config/example/mcore/: pretrain_deepseek3_671b_4k_A3_ptd.sh
hyper_parallel/auto_parallel/fast-tuner/config/setup_config/: args_for_dryrun.json  args_for_parallel_tool.json  args_for_parallel_tool_mcore.json  args_for_parallel_tool_titan.json  args_for_pipeline_parallel.json  args_for_pipeline_tool.json
hyper_parallel/auto_parallel/fast-tuner/docs/: mindformers.md  mindspeed.md  torchtitan.md
hyper_parallel/auto_parallel/fast-tuner/fast_tuner/: parallel_tool.py  pipeline_tool.py
hyper_parallel/auto_parallel/fast-tuner/fast_tuner/ndsearch/: build_initial_spaces.py  expert_filter_configs.py  memory_model.py  para_for_nd_search.py
hyper_parallel/auto_parallel/fast-tuner/fast_tuner/pipeline_conductor/: dryrun.py  fitting.py  math_model.py  memory.py  micro.py  pipeline_parallel.py  pp_simulator.py  pp_util.py  result_csv.py  solution.py  start_service.py
hyper_parallel/auto_parallel/fast-tuner/fast_tuner/utils/: common.py  dryrun_manage.py  input_config.py  input_param.py  logger.py  ppc_input.py
hyper_parallel/auto_parallel/fast-tuner/fast_tuner/utils/profiling/: profile_info.py  profile_launch.py  profile_parser.py  profile_prepare.py
hyper_parallel/auto_parallel/fast-tuner/unit_tests/: nd_search_test.py  pipeline_alg_test.py
hyper_parallel/auto_parallel/fast-tunner/: README.md
hyper_parallel/collectives/: cc.py
hyper_parallel/core/: device_mesh.py  dtensor.py  layout.py  parameter_init.py  placement_types.py  random.py  redistribute_infer.py  tensor_redistribution.py  utils.py
hyper_parallel/core/activation_checkpoint/: __init__.py  activation_checkpoint.py  swap.py
hyper_parallel/core/checkpoint/: __init__.py  api.py  filesystem_storage.py  layout.py  loader.py  metadata.py  planner.py  reshard.py  saver.py  standard_planner.py  storage.py  util.py
hyper_parallel/core/fully_shard/: __init__.py  api.py  hsdp_async_grad_hook.py  hsdp_grad_buffer.py  hsdp_grad_hook.py  hsdp_param.py  hsdp_param_buffer.py  hsdp_scheduler.py  hsdp_state.py  hsdp_utils.py
hyper_parallel/core/hsdp/: __init__.py  api.py  hsdp_api.py  hsdp_async_grad_hook.py  hsdp_grad_buffer.py  hsdp_grad_hook.py  hsdp_param.py  hsdp_param_buffer.py  hsdp_scheduler.py  hsdp_state.py  hsdp_utils.py
hyper_parallel/core/hsdp_refactor/: __init__.py  api.py  hsdp_async_grad_hook.py  hsdp_grad_buffer.py  hsdp_param.py  hsdp_param_buffer.py  hsdp_scheduler.py  hsdp_state.py  hsdp_utils.py
hyper_parallel/core/pipeline_parallel/: __init__.py  scheduler.py  stage.py  utils.py
hyper_parallel/core/shard/: _op_dispatch.py  api.py  local_func.py  sharding_plan.py
hyper_parallel/core/tensor_parallel/: _op_dispatch.py  local_func.py  shard.py
hyper_parallel/platform/: __init__.py  platform.py
hyper_parallel/platform/mindspore/: dtensor.py  parameter_init.py  platform.py  platform_graph.py
hyper_parallel/platform/mindspore/custom_pass/: CMakeLists.txt  __init__.py  build_plugin.py  hyper_parallel_mindspore.cc
hyper_parallel/platform/mindspore/custom_pass/passes/duplicate_on_multi_users/: duplicate_on_multi_users.cc  duplicate_on_multi_users.h
hyper_parallel/platform/torch/: dtensor.py  function_override.py  group_utils.py  platform.py
mindspore/dist_parallel/: dtensor.py  layout.py  redistribute_infer.py  tensor_redistribution.py
mindspore/dist_parallel/mpmd/: __init__.py
mindspore/dist_parallel/spmd/: parameter_init.py
tests/common/: mark_utils.py  random_generator.py
tests/custom_ops/: parallel_stack_ext.py  stack_ext_ops.yaml
tests/mindspore/: common_net.py  test_parameter_init.py
tests/mindspore/checkpoint/: test_reshard_handler.py
tests/mindspore/hsdp/: hsdp.py  hsdp_comm_async.py  hsdp_comm_fusion.py  hsdp_prefetch.py  hsdp_test_common.py  test_hsdp_dryrun.py  test_hsdp_mixed_precision.py  test_hsdp_msrun.py  test_hsdp_param_dryrun.py  test_hsdp_performance.py
tests/mindspore/pipeline_parallel/: test_vpp_schedule.py  (+1 more)
tests/torch/: common_net.py  utils.py
torch/dist_parallel/: _group_manager.py  layout.py
(+529 files in other folders)
