[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-tuner"
version = "0.0.1dev0"
description = "Fast Algorithm Supported by Theories. AI Framework hyper-parameter tuner."
readme = ""
requires-python = ">=3.9"
authors = [
    {name = "Taylor Lab"}
]
maintainers = [
    {name = "Taylor Lab"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml",
    "numpy<2.0.0",
    "ortools",
    "matplotlib",
    "chardet",
    "highspy",
    "toml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "http://example.com"
Repository = "http://example.com"
Issues = "http://example.com"

[project.scripts]
fast-tuner-parallel = "fast_tuner.parallel_tool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fast_tuner*"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
